--- a/resources/assets/sass/paginator.scss
+++ b/resources/assets/sass/paginator.scss
@@ -4,7 +4,7 @@ $border-color: #e5e5e5;
 $white-color: #ffffff;
 
 .pagination {
-	margin-left: 20px;
+	justify-content: center;
 }
 
 .movies-list__link {
