--- a/resources/assets/sass/paginator.scss
+++ b/resources/assets/sass/paginator.scss
@@ -2,6 +2,7 @@ $text-color: #636b6f;
 $primary-color: #00ced1;
 $border-color: #e5e5e5;
 $white-color: #ffffff;
+$hover-color: rgba(0, 206, 209, 0.1);
 
 .pagination {
 	justify-content: center;
@@ -10,16 +11,27 @@ $white-color: #ffffff;
 .movies-list__link {
 	color: $primary-color;
 	font-weight: 400;
+
+	&:hover {
+		text-decoration: none;
+		color: $primary-color;
+	}
 }
 
 .movies-list__link--active {
 	color: $white-color;
+	text-decoration: none;
+
+	&:hover {
+		color: $white-color;
+	}
 }
 
 .movies-list__item {
 	padding: 6px 12px;
 	border: 1px solid $border-color;
 	border-right: none;
+	cursor: pointer;
 
 	&:first-of-type {
 		border-bottom-left-radius: 4px;
@@ -30,6 +42,14 @@ $white-color: #ffffff;
 		border-bottom-right-radius: 4px;
 		border-top-right-radius: 4px;
 		border-right: 1px solid $border-color;
+
+		&.movies-list__item--active {
+			border-right-color: $primary-color;
+		}
+	}
+
+	&:hover {
+		background-color: $hover-color;
 	}
 }
 
@@ -39,5 +59,9 @@ $white-color: #ffffff;
 
 	& + li {
 		border-left-color: $primary-color;
-  }
+	}
+
+	&:hover {
+		background-color: $primary-color;
+	}
 }
